WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263686
[JSC] `yield` is not a valid BindingIdentifier for AsyncGeneratorExpression
https://bugs.webkit.org/show_bug.cgi?id=263686
Summary
[JSC] `yield` is not a valid BindingIdentifier for AsyncGeneratorExpression
Alexey Shvayka
Reported
2023-10-25 14:44:48 PDT
Related test262 failure: * test/language/expressions/async-generator/early-errors-expression-yield-as-function-binding-identifier.js
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-25 14:45:24 PDT
<
rdar://problem/117497786
>
Alexey Shvayka
Comment 2
2023-10-25 14:54:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19568
EWS
Comment 3
2023-10-25 22:39:41 PDT
Committed
269801@main
(d5e6b960d1d0): <
https://commits.webkit.org/269801@main
> Reviewed commits have been landed. Closing PR #19568 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug